--- a/src/styles/StylesTable.module.css
+++ b/src/styles/StylesTable.module.css
@@ -1,6 +1,7 @@
 :root {
   --color-focus: #4fdbb8;
   --colorback: #1d1d1d;
+  --colorCard: #262525;
   --margin-left: 135px;
 }
 /* componente SectiionTable */
@@ -14,7 +15,7 @@
 
 .card {
   /* border: 1px solid yellow; */
-  background-color: var(--colorback);
+  background-color: var(--colorCard);
   color: #fff;
   box-shadow: 1px 1px 4px black;
   margin: 0 2% 4% 0;
