--- a/src/styles/StylesMenu.module.css
+++ b/src/styles/StylesMenu.module.css
@@ -19,8 +19,9 @@
 .name {
   grid-column: 3/10;
   grid-row: 5/6;
-  margin: 0 0 10px 0;
+  margin: 0 0 0 0;
   color: #ababaa;
+  font-size: 2vw;
 }
 .subTitle {
   color: #666666;
@@ -28,6 +29,7 @@
   grid-row: 6/7;
   margin: 8px 0 0 0;
   font-size: 75%;
+  text-align: center;
 }
 .buttonGroup {
   grid-column: 1/11;
